Specify linker type for resource-only libraries
This fixes configuration for NMake generators. This is to support CLion
and other IDEs which can import CMake projects.

--- a/src/lang/CMakeLists.txt
+++ b/src/lang/CMakeLists.txt
@@ -1,4 +1,11 @@
+# Resource libraries don't have entry points.
 set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /noentry")
+
 add_library(russian MODULE russian.rc)
 add_library(english MODULE english.rc)
+
+# Tell CMake which linker to use for RC-only libraries.
+set_target_properties(russian PROPERTIES LINKER_LANGUAGE C)
+set_target_properties(english PROPERTIES LINKER_LANGUAGE C)
+
 install(TARGETS russian english DESTINATION release/lang)
