Fix configuration issue for NMake generators
This is to support CLion and other IDEs which can import CMake projects.

--- a/src/lang/CMakeLists.txt
+++ b/src/lang/CMakeLists.txt
@@ -2,3 +2,6 @@ set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} /noentry")
 add_library(russian MODULE russian.rc)
 add_library(english MODULE english.rc)
 install(TARGETS russian english DESTINATION release/lang)
+
+# There seems to be a bug in CMake when generating NMake makefiles for RC files. This line is a work-around.
+set(CMAKE_RC_CREATE_SHARED_MODULE ${CMAKE_C_CREATE_SHARED_MODULE})
